--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>annotationProcessor</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
@@ -83,6 +89,9 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
+
 
 
 
