--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=spring-security-jwt
 jwt.private.key=classpath:app.key
 jwt.public.key=classpath:app.pub
+jwt.issuer=com.exemplo.tenissonjr
+jwt.minutes.expiration=1
+
